Ass3/initial/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from c:\Users\ACER\Desktop\Hardcore coding\HKI 2020-2021\PPL\Ass3\initial\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Body'", "'Else'", "'EndFor'", "'If'", 
                     "'Var'", "'EndDo'", "'Break'", "'ElseIf'", "'EndWhile'", 
                     "'Parameter'", "'While'", "'Continue'", "'EndBody'", 
                     "'For'", "'Return'", "'True'", "'False'", "'Do'", "'EndIf'", 
                     "'Function'", "'Then'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'\\'", "'%'", "'+.'", 
                     "'-.'", "'*.'", "'\\.'", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'=/='", "'<.'", 
                     "'>.'", "'<=.'", "'>=.'", "'('", "')'", "'['", "']'", 
                     "':'", "'.'", "','", "';'", "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "BODY", "ELSE", "ENDFOR", "IF", "VAR", 
                      "ENDDO", "BREAK", "ELSEIF", "ENDWHILE", "PAR", "WHILE", 
                      "CONT", "ENDBODY", "FOR", "RETURN", "TRUE", "FALSE", 
                      "DO", "ENDIF", "FUNCTION", "THEN", "BLOCK_COMMENT", 
                      "Intlit", "INTLIT", "HEXALIT", "OCTLIT", "FLOATLIT", 
                      "BOOLEAN", "STRINGLIT", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "ADDF", "SUBF", "MULF", "DIVF", "NOT", "AND", 
                      "OR", "EQUAL", "NOT_EQUAL", "LT", "GT", "LE", "GE", 
                      "NOT_EQUALF", "LTF", "GTF", "LEF", "GEF", "LP", "RP", 
                      "LS", "RS", "CL", "DOT", "CM", "SM", "LB", "RB", "ASSIGN", 
                      "ID", "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_var_declare = 1
    RULE_var_list = 2
    RULE_variable = 3
    RULE_scalar = 4
    RULE_composite = 5
    RULE_dime = 6
    RULE_initial_value = 7
    RULE_literal = 8
    RULE_boolean = 9
    RULE_arr = 10
    RULE_arr_list = 11
    RULE_func_declare = 12
    RULE_par_list = 13
    RULE_parameter = 14
    RULE_statement = 15
    RULE_stmt = 16
    RULE_local_var_declare = 17
    RULE_stmt_list = 18
    RULE_assign_statement = 19
    RULE_if_statement = 20
    RULE_for_statement = 21
    RULE_while_statement = 22
    RULE_do_while_statement = 23
    RULE_break_statement = 24
    RULE_continue_statement = 25
    RULE_call_statement = 26
    RULE_return_statement = 27
    RULE_index_operators = 28
    RULE_expression = 29
    RULE_exp1 = 30
    RULE_exp2 = 31
    RULE_exp3 = 32
    RULE_exp4 = 33
    RULE_exp5 = 34
    RULE_exp6 = 35
    RULE_exp7 = 36
    RULE_operands = 37
    RULE_expression_list = 38
    RULE_func_call = 39
    RULE_rela_operator = 40
    RULE_logic_operator = 41
    RULE_add_operator = 42
    RULE_mul_operator = 43
    RULE_not_operator = 44
    RULE_sign_operator = 45

    ruleNames =  [ "program", "var_declare", "var_list", "variable", "scalar", 
                   "composite", "dime", "initial_value", "literal", "boolean", 
                   "arr", "arr_list", "func_declare", "par_list", "parameter", 
                   "statement", "stmt", "local_var_declare", "stmt_list", 
                   "assign_statement", "if_statement", "for_statement", 
                   "while_statement", "do_while_statement", "break_statement", 
                   "continue_statement", "call_statement", "return_statement", 
                   "index_operators", "expression", "exp1", "exp2", "exp3", 
                   "exp4", "exp5", "exp6", "exp7", "operands", "expression_list", 
                   "func_call", "rela_operator", "logic_operator", "add_operator", 
                   "mul_operator", "not_operator", "sign_operator" ]

    EOF = Token.EOF
    BODY=1
    ELSE=2
    ENDFOR=3
    IF=4
    VAR=5
    ENDDO=6
    BREAK=7
    ELSEIF=8
    ENDWHILE=9
    PAR=10
    WHILE=11
    CONT=12
    ENDBODY=13
    FOR=14
    RETURN=15
    TRUE=16
    FALSE=17
    DO=18
    ENDIF=19
    FUNCTION=20
    THEN=21
    BLOCK_COMMENT=22
    Intlit=23
    INTLIT=24
    HEXALIT=25
    OCTLIT=26
    FLOATLIT=27
    BOOLEAN=28
    STRINGLIT=29
    ADD=30
    SUB=31
    MUL=32
    DIV=33
    MOD=34
    ADDF=35
    SUBF=36
    MULF=37
    DIVF=38
    NOT=39
    AND=40
    OR=41
    EQUAL=42
    NOT_EQUAL=43
    LT=44
    GT=45
    LE=46
    GE=47
    NOT_EQUALF=48
    LTF=49
    GTF=50
    LEF=51
    GEF=52
    LP=53
    RP=54
    LS=55
    RS=56
    CL=57
    DOT=58
    CM=59
    SM=60
    LB=61
    RB=62
    ASSIGN=63
    ID=64
    WS=65
    ERROR_CHAR=66
    UNCLOSE_STRING=67
    ILLEGAL_ESCAPE=68
    UNTERMINATED_COMMENT=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declareContext,i)


        def func_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declareContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 92
                self.var_declare()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 98
                self.func_declare()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 104
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def CL(self):
            return self.getToken(BKITParser.CL, 0)

        def var_list(self):
            return self.getTypedRuleContext(BKITParser.Var_listContext,0)


        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_declare




    def var_declare(self):

        localctx = BKITParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(BKITParser.VAR)
            self.state = 107
            self.match(BKITParser.CL)
            self.state = 108
            self.var_list()
            self.state = 109
            self.match(BKITParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(BKITParser.VariableContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def initial_value(self):
            return self.getTypedRuleContext(BKITParser.Initial_valueContext,0)


        def CM(self):
            return self.getToken(BKITParser.CM, 0)

        def var_list(self):
            return self.getTypedRuleContext(BKITParser.Var_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_list




    def var_list(self):

        localctx = BKITParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.variable()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 112
                self.match(BKITParser.ASSIGN)
                self.state = 113
                self.initial_value()


            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.CM:
                self.state = 116
                self.match(BKITParser.CM)
                self.state = 117
                self.var_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scalar(self):
            return self.getTypedRuleContext(BKITParser.ScalarContext,0)


        def composite(self):
            return self.getTypedRuleContext(BKITParser.CompositeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variable




    def variable(self):

        localctx = BKITParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 120
                self.scalar()
                pass

            elif la_ == 2:
                self.state = 121
                self.composite()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScalarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_scalar




    def scalar(self):

        localctx = BKITParser.ScalarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_scalar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(BKITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompositeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def dime(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.DimeContext)
            else:
                return self.getTypedRuleContext(BKITParser.DimeContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_composite




    def composite(self):

        localctx = BKITParser.CompositeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_composite)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(BKITParser.ID)
            self.state = 128 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 127
                self.dime()
                self.state = 130 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.LS):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LS(self):
            return self.getToken(BKITParser.LS, 0)

        def Intlit(self):
            return self.getToken(BKITParser.Intlit, 0)

        def RS(self):
            return self.getToken(BKITParser.RS, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_dime




    def dime(self):

        localctx = BKITParser.DimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dime)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(BKITParser.LS)
            self.state = 133
            self.match(BKITParser.Intlit)
            self.state = 134
            self.match(BKITParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Initial_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_initial_value




    def initial_value(self):

        localctx = BKITParser.Initial_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_initial_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Intlit(self):
            return self.getToken(BKITParser.Intlit, 0)

        def boolean(self):
            return self.getTypedRuleContext(BKITParser.BooleanContext,0)


        def FLOATLIT(self):
            return self.getToken(BKITParser.FLOATLIT, 0)

        def STRINGLIT(self):
            return self.getToken(BKITParser.STRINGLIT, 0)

        def arr(self):
            return self.getTypedRuleContext(BKITParser.ArrContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_literal




    def literal(self):

        localctx = BKITParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_literal)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.Intlit]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(BKITParser.Intlit)
                pass
            elif token in [BKITParser.TRUE, BKITParser.FALSE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.boolean()
                pass
            elif token in [BKITParser.FLOATLIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.match(BKITParser.FLOATLIT)
                pass
            elif token in [BKITParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.match(BKITParser.STRINGLIT)
                pass
            elif token in [BKITParser.LB]:
                self.enterOuterAlt(localctx, 5)
                self.state = 142
                self.arr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(BKITParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(BKITParser.FALSE, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_boolean




    def boolean(self):

        localctx = BKITParser.BooleanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_boolean)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            _la = self._input.LA(1)
            if not(_la==BKITParser.TRUE or _la==BKITParser.FALSE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(BKITParser.LB, 0)

        def RB(self):
            return self.getToken(BKITParser.RB, 0)

        def arr_list(self):
            return self.getTypedRuleContext(BKITParser.Arr_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_arr




    def arr(self):

        localctx = BKITParser.ArrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(BKITParser.LB)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.TRUE) | (1 << BKITParser.FALSE) | (1 << BKITParser.Intlit) | (1 << BKITParser.FLOATLIT) | (1 << BKITParser.STRINGLIT) | (1 << BKITParser.LB))) != 0):
                self.state = 148
                self.arr_list()


            self.state = 151
            self.match(BKITParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arr_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.LiteralContext)
            else:
                return self.getTypedRuleContext(BKITParser.LiteralContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_arr_list




    def arr_list(self):

        localctx = BKITParser.Arr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arr_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.literal()
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.CM:
                self.state = 154
                self.match(BKITParser.CM)
                self.state = 155
                self.literal()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def CL(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CL)
            else:
                return self.getToken(BKITParser.CL, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def statement(self):
            return self.getTypedRuleContext(BKITParser.StatementContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def PAR(self):
            return self.getToken(BKITParser.PAR, 0)

        def par_list(self):
            return self.getTypedRuleContext(BKITParser.Par_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declare




    def func_declare(self):

        localctx = BKITParser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_func_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(BKITParser.FUNCTION)
            self.state = 162
            self.match(BKITParser.CL)
            self.state = 163
            self.match(BKITParser.ID)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PAR:
                self.state = 164
                self.match(BKITParser.PAR)
                self.state = 165
                self.match(BKITParser.CL)
                self.state = 166
                self.par_list()


            self.state = 169
            self.match(BKITParser.BODY)
            self.state = 170
            self.match(BKITParser.CL)
            self.state = 171
            self.statement()
            self.state = 172
            self.match(BKITParser.ENDBODY)
            self.state = 173
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Par_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ParameterContext)
            else:
                return self.getTypedRuleContext(BKITParser.ParameterContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_par_list




    def par_list(self):

        localctx = BKITParser.Par_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_par_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.parameter()
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.CM:
                self.state = 176
                self.match(BKITParser.CM)
                self.state = 177
                self.parameter()
                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scalar(self):
            return self.getTypedRuleContext(BKITParser.ScalarContext,0)


        def composite(self):
            return self.getTypedRuleContext(BKITParser.CompositeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_parameter




    def parameter(self):

        localctx = BKITParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 183
                self.scalar()
                pass

            elif la_ == 2:
                self.state = 184
                self.composite()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def local_var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Local_var_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Local_var_declareContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.StmtContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_statement




    def statement(self):

        localctx = BKITParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 187
                self.local_var_declare()
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 196
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 193
                    self.stmt() 
                self.state = 198
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
